--- a/sass/partials/_products.scss
+++ b/sass/partials/_products.scss
@@ -17,7 +17,7 @@ a {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 0 10% 60px 10%;
+    padding: 20px 10% 60px 10%;
 }
 
 .product-card-container {
